--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -867,11 +867,12 @@ header {
 .fond-advantage {
 	min-height: 298px;
 	border-bottom: 1px solid #CACED2;
+        position: relative;
 }
 .fond-advantage a.btn-close-tab {
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 10px;
 }
 .list-advantage {
 	width: 100%;
