--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -2350,7 +2350,7 @@ footer {
 .breadcrumbs {
 	font-size: 16px;
 	font-weight: 700;
-	padding: 51px 0 35px 0;
+	padding: 0 0 15px 0;
 }
 .breadcrumbs li {
 	float: left;
@@ -5984,7 +5984,7 @@ select.ca-i_input.input-error_3 {
 	}
 	.breadcrumbs {
 	    font-size: 8px;
-	    padding: 25px 0 18px 0;
+	    padding: 0px 0 8px 0;
 	}
 	.page_2 .h-menu:after, 
 	.page_3 .h-menu:after {
