Remove blank link and link to product without description

--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -92,6 +92,10 @@ xxl
 	.link:hover {
 	    text-decoration: none;
 	}
+
+	[data-display="disabled"] {
+		pointer-events: none !important;
+	}
 /* General */
 
 /* Modals */
