--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -1261,13 +1261,31 @@ xxl
     hr.indent.lg{ height: 4rem; }
     hr.indent.xl{ height: 5rem; }
 
-     @media (min-width: 768px) and (max-width: 991px) {
+
+    @media (min-width: 1920px) {
+    	.hidden-xxl { display: none; }
+	}
+
+	@media (min-width: 1200px) and (max-width: 1919px) {
+		.hidden-xl { display: none; }
+	}
+
+	@media (min-width: 992px) and (max-width: 1199px) {
+		.hidden-lg { display: none; }
+	}
+	
+
+    @media (min-width: 768px) and (max-width: 991px) {
+    	.hidden-md { display: none; }
+
     	.text-align-left-md { text-align: left !important; }
 	    .text-align-right-md { text-align: right !important; }
 	    .text-align-center-md { text-align: center !important; }
     }
 
     @media (min-width: 576px) and (max-width: 767px) {
+    	.hidden-sm { display: none; }
+
     	.text-align-left-sm { text-align: left !important; }
 	    .text-align-right-sm { text-align: right !important; }
 	    .text-align-center-sm { text-align: center !important; }
