--- a/new_design/css/style.css
+++ b/new_design/css/style.css
@@ -5675,8 +5675,8 @@ select.ca-i_input.input-error_3 {
 		height: 40px;
 		top: -38px;
     	right: 8px;
-    	line-height: 41px;
-    	font-size: 1em;
+    	line-height: 40px;
+    	font-size: 14px;
 	}
 	.p-o_link {
 	    padding: 0px 0px 0 0px;
