--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -99,26 +99,44 @@ xxl
 /* General */
 
 /* Category */
+	.product-sale-container {
+		display: block;
+		box-sizing: border-box;
+		padding: 0px 15px;
+	}
+
 	.product-sale {
-		top: 14px;
 		position: relative;
 		display: block;
 		width: 100%;
-		height: auto;
+		max-width: 494px;
+		height: 32px;
 	    box-sizing: border-box;
-	    padding: 0px 76px;
+	    margin: 15px 0px 5px;
+	    padding: 10px 15px;
+	    border-radius: 50px;
+	    background-color: #F5F7F9;
+	    -webkit-box-shadow: 0 4px 7px rgba(0,0,0,.15);
+    	box-shadow: 0 4px 7px rgba(0,0,0,.15);
 
 		font-size: 14px;
-	    color: #777777;
+		font-weight: 500;
+	    color: #749d3e;
 	    line-height: 12px;
+	    text-align: center;
+	}
+
+	.product-sale.empty {
+		opacity: 0;
+	}
+
+	.product-sale .price {
 	    text-decoration: line-through;
-	    text-align: right;
 	}
 
 	@media (max-width: 767px) {
 		.product-sale {
-			top: 10px;
-		    padding: 0px 31px;
+		    padding: 10px 30px;
 			font-size: 10px;
 		}
 	}
